<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="privacyUiVM" type="com.saturnosapplication.app.modules.privacyui.data.viewmodel.PrivacyUiVM"/>
    </data>
    <LinearLayout android:gravity="start"
        android:id="@+id/linearPrivacyUI"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStylewhite_A700">
        <TextView android:ellipsize="end"
            android:id="@+id/txtPrivacyPolicy"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_23pxh"
            android:layout_marginStart="@dimen/_23pxh"
            android:layout_marginTop="@dimen/_45pxv"
            android:layout_width="match_parent"
            android:singleLine="true"
            android:text="@{privacyUiVM.privacyUiModel.txtPrivacyPolicy}"
            style="@style/txtPoppinsbold32" tools:text="@string/lbl_privacy_policy"/>
        <TextView android:gravity="center_horizontal"
            android:id="@+id/txtDescription"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_23pxh"
            android:layout_marginStart="@dimen/_23pxh"
            android:layout_marginTop="@dimen/_8pxv"
            android:layout_width="match_parent"
            android:text="@{privacyUiVM.privacyUiModel.txtDescription}"
            style="@style/txtPoppinsregular14" tools:text="@string/msg_our_mental_heal"/>
        <RadioButton android:buttonTint="@color/black_900"
            android:ellipsize="end" android:fontFamily="@font/poppins"
            android:id="@+id/rbIagreetothe"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_38pxh"
            android:layout_marginStart="@dimen/_38pxh"
            android:layout_marginTop="@dimen/_60pxv"
            android:layout_width="wrap_content"
            android:paddingStart="@dimen/_8pxh"
            android:singleLine="true"
            android:text="@string/msg_i_agree_to_the"
            android:textColor="@color/black_900"
            android:textFontWeight="400"
            android:textSize="@dimen/_14pxh" android:textStyle="normal" tools:text="@string/msg_i_agree_to_the"/>
        <androidx.appcompat.widget.AppCompatButton
            android:ellipsize="end" android:gravity="center"
            android:id="@+id/btnNext"
            android:layout_gravity="center_horizontal"
            android:layout_height="@dimen/_58pxv"
            android:layout_marginBottom="@dimen/_28pxv"
            android:layout_marginEnd="@dimen/_23pxh"
            android:layout_marginStart="@dimen/_23pxh"
            android:layout_marginTop="@dimen/_19pxv"
            android:layout_width="@dimen/_264pxh"
            android:paddingBottom="@dimen/_12pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_30pxh"
            android:paddingTop="@dimen/_12pxv" android:singleLine="true"
            android:text="@string/lbl_next" android:textAllCaps="false"
            style="@style/btnSolidRounded" tools:text="@string/lbl_next"/>
    </LinearLayout>
</layout>
